# The-Base-Standard

./: .dockerignore  .env.example  .gitignore  .gitkeep  .gitmodules  API_FIXES_COMPLETE.md  CHECKLIST.md  CODE_REVIEW_SUMMARY.md  COMPLETE_IMPLEMENTATION_REPORT.md  DOCUMENTATION_INDEX.md  Dockerfile  FINALIZATION_SUMMARY.md  IMAGES_GUIDE.md  IMPLEMENTATION_COMPLETE.md  INTEGRATIONS_COMPLETE.md  PRODUCTION_CHECKLIST.md  PROJECT_REVIEW.md  PROJECT_STATUS.md  PROJECT_SUMMARY.md  PVC_IMPLEMENTATION_STATUS.md  QUICKSTART.md  README.md  RECALIBRATION_IMPLEMENTATION.md  TESTING.md  TEST_SUMMARY.md  TYPESCRIPT_FIXES.md  UI_UPDATE_SUMMARY.md  next.config.ts  package-lock.json  package.json  playwright.config.ts  prisma.config.ts  run-tests.bat  run-tests.sh  tailwind.config.ts  tsconfig.json  vercel.json  vitest.config.ts
.claude/: settings.local.json
apps/agent/: .env.example  Dockerfile  chain_writer.py  database.py  main.py  pyproject.toml  pytest.ini  requirements.txt  score_calculator.py
apps/agent/tests/: test_database.py  test_score_calculator.py
docs/: ACTION_PLAN.md  AGENT_FEATURES_README.md  AGENT_INTEGRATION_SPEC.md  AGENT_SETUP_GUIDE.md  API_DOCUMENTATION.md  BRANDING_ASSETS.md  BRANDING_GUIDE.md  CHAINLINK_AUTOMATION_SETUP.md  CHAINLINK_AUTOMATION_UI_GUIDE.md  CODE_REVIEW_SUMMARY.md  COMPETITIVE_ANALYSIS.md  DATA_INTEGRATIONS_COMPLETE.md  DATA_INTEGRATIONS_STATUS.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_QUICKSTART.md  DEPLOYMENT_RUNBOOK.md  ENV_VARIABLES.md  ENV_VARIABLES_AGENT.md  FILE_ORGANIZATION.md  FINAL_SETUP_INSTRUCTIONS.md  FINAL_STATUS.md  (+43 more)
(+193 files in other folders)
